<resources>
    <string name="app_name">租屋雷達</string>
    <string name="radar_error_not_connect">系統異常，請稍後再嘗試！ 錯誤代碼:500</string>
    <string name="radar_word_limit_exceeded">超出字數限制</string>
    <string name="radar_word_empty">名稱不能為空</string>
    <string name="radar_push_on">推播通知：已開啟</string>
    <string name="radar_push_off">推播通知：已關閉</string>
    <string name="radar_label_region">區域搜尋</string>
    <string name="radar_label_landmark">地標搜尋</string>
    <string name="radar_label_mrt">捷運搜尋</string>
    <string name="radar_label_commute">通勤專案</string>
    <string name="filter_title">雷達設定</string>
    <string name="filter_top_area">區域搜尋</string>
    <string name="filter_top_landmark">地標搜尋</string>
    <string name="filter_top_mrt">捷運快搜</string>
    <string name="filter_top_commute">通勤專案</string>
    <string name="filter_rent_range">租金範圍</string>
    <string name="filter_type">類型</string>
    <string name="filter_filter_condition">過濾條件</string>
    <string name="filter_button_confirm">佈署雷達</string>
    <string name="filter_money">元</string>
    <string name="filter_mrt_not_ready">通勤專案捷運尚未尋找完畢，請稍後或選擇其他搜尋方式！</string>
    <string name="common_tilde">~</string>
    <string name="common_arrow_right">＞</string>
    <string name="common_cancel">取消</string>
    <string name="common_cancel_left">＜ 取消</string>
    <string name="common_confirm">確認</string>
    <string name="common_finish">完成</string>
    <string name="common_back">返回</string>
    <string name="common_add_favorite">已新增收藏</string>
    <string name="common_add_favorite_500">新增收藏失敗! 錯誤代碼:500</string>
    <string name="common_add_favorite_400">新增收藏失敗! 錯誤代碼:400</string>
    <string name="common_add_favorite_404">新增收藏失敗! 錯誤代碼:404</string>
    <string name="common_delete_favorite">已移除收藏</string>
    <string name="common_delete_favorite_500">移除收藏失敗! 錯誤代碼:500</string>
    <string name="common_delete_favorite_400">移除收藏失敗! 錯誤代碼:400</string>
    <string name="common_delete_favorite_404">移除收藏失敗! 錯誤代碼:404</string>
    <string name="common_is_error">因系統異常，暫時無法存儲此條件，請返回上頁，謝謝。</string>
    <string name="filter_error_no_search">尚未選擇任何搜尋方式，請務必選擇一種搜尋方式後再點選確認。</string>
    <string name="filter_error_json_format_error">系統異常，請稍後再嘗試！ 錯誤代碼:jme</string>
    <string name="filter_error_json_format_error_internet">系統異常，請稍後再嘗試！ 錯誤代碼:400</string>
    <string name="filter_error_not_found_user">系統異常，請稍後再嘗試！ 錯誤代碼:404</string>
    <string name="filter_error_not_connect">系統異常，請稍後再嘗試！ 錯誤代碼:500</string>
    <string name="filter_rent_all">不限</string>
    <string name="filter_rent_startrent">起始金額</string>
    <string name="filter_rent_endrent">結束金額</string>
    <string name="filter_back">＜返回</string>
    <string name="fliter_type_all">不限</string>
    <string name="filter_type_share_suite">分租套房</string>
    <string name="filter_type_single_suite">獨立套房</string>
    <string name="filter_type_whole_floor_home">整層住家</string>
    <string name="filter_type_bedsit">雅房</string>
    <string name="filter_type_house_and_office">住辦</string>
    <string name="filter_area">區域</string>
    <string name="filter_area_error_info">很抱歉，取得城市區域資料錯誤，請稍後再試或使用其他搜尋方式，造成您的不便，深感抱歉。</string>
    <string name="filter_landmark">地標</string>
    <string name="filter_distance">週邊</string>
    <string name="filter_mrt">捷運</string>
    <string name="filter_mrt_error_info">很抱歉，取得捷運站點資料錯誤，請稍後再試或使用其他搜尋方式，造成您的不便，深感抱歉。</string>
    <string name="filter_landmark_radius">一 範圍半徑 一</string>
    <string name="filter_landmark_option">一 當前設定 一</string>
    <string name="filter_landmark_name">地標： </string>
    <string name="filter_landmark_range_title">範圍： </string>
    <string name="filter_landmark_range">週邊 </string>
    <string name="filter_landmark_km">公里</string>
    <string name="filter_landmark_0km">0公里</string>
    <string name="filter_landmark_3km">3公里</string>
    <string name="filter_landmark_6km">6公里</string>
    <string name="filter_landmark_my_location">我的位置</string>
    <string name="filter_landmark_default_address">CMoney北區教育訓練中心</string>
    <string name="filter_landmark_no_gps">GPS未開啟，請開啟定位功能或改用其他搜尋方式！</string>
    <string name="filter_landmark_my_location_error">取得定位資訊失敗，請手動輸入目的地，或改以其他搜尋方式。</string>
    <string name="filter_mrt_choosed">已選擇：</string>
    <string name="filter_mrt_choosed_number">/ 5</string>
    <string name="filter_no_search_hint_area">請設定區域</string>
    <string name="filter_no_search_hint_landmark">請設定地標</string>
    <string name="filter_no_search_hint_mrt">請設定捷運</string>
    <string name="filter_no_search_hint_commute">請設定目的地及交通方式</string>
    <string name="filter_commute_edit_transportation">交通方式：</string>
    <string name="filter_commute_edit_time">通勤時間(min)：</string>
    <string name="filter_commute_context_time">通勤時間：</string>
    <string name="filter_commute_hint">請輸入您的目的地</string>
    <string name="filter_commute_target_title">目的地</string>
    <string name="filter_commute_target">目的地：</string>
    <string name="filter_commute_minute">min</string>
    <string name="filter_commute_google_error">取得google資料失敗，請稍後再試，或改以其他交通、搜尋方式。</string>
    <string name="filter_commute_city_not_found_mrt">目的地城市並無設置捷運，請選擇其他通勤方式！</string>
    <string name="filter_commute_mrt_search">正在尋找符合的捷運站，請稍後…</string>
    <string name="filter_commute_no_transport_error">未設定目的地或交通方式，請選擇後再點選，或返回使用其他搜尋方式！</string>
    <string name="filter_commute_no_mrt_error">您目前的設定並無符合的捷運站，請增加通勤時間或更改交通方式！</string>
    <string name="filter_commute_mrt_list_ready">已取得符合的捷運站點！</string>
    <string name="filter_commmute_mrt_title">交通方式-捷運說明：</string>
    <string name="filter_commmute_mrt_content">此交通方式計算係已目的地最近及鄰近捷運站計算，並未包含捷運各站間停留、轉乘時間，租屋處至捷運站及捷運站至目的地的通行時間，通勤時間僅為參考用，實際通勤時間仍須以住家、目的地至捷運站之距離、交通方式以及捷運運輸時間而定。</string>
    <string name="filter_commmute_drive_title">交通方式-開車說明：</string>
    <string name="filter_commmute_drive_content">此交通方式計算係已開車、機車於市區交通、不行駛高速公路方式計算，通勤時間僅為參考用，實際通勤時間仍須以實際距離、交通路況而定。</string>
    <string name="results_object_title">詳細資料</string>
    <string name="results_object_rent">元/月</string>
    <string name="results_object_average_rent">平均房價：＄</string>
    <string name="result_object_squarekm_title">坪數：</string>
    <string name="results_object_square_km">坪</string>
    <string name="results_object_location">位置：</string>
    <string name="results_object_floor">樓層:</string>
    <string name="results_object_house_type">類型：</string>
    <string name="results_object_update_time">系統更新日期：</string>
    <string name="results_object_convenience">生活機能</string>
    <string name="results_object_convenience_tab_range">範圍內</string>
    <string name="results_object_convenience_tab_nearest">距離最近</string>
    <string name="results_object_convenience_tab_statistics">機能統計</string>
    <string name="results_object_convenience_colon">：</string>
    <string name="results_object_convenience_meter">m</string>
    <string name="results_object_convenience_home">家</string>
    <string name="results_object_convenience_distance_traffic">最近的大眾運輸站</string>
    <string name="results_object_convenience_distance_food">最近的餐飲店家</string>
    <string name="results_object_convenience_distance_supermarket">最近的超市</string>
    <string name="results_object_convenience_distance_store">最近的便利商店</string>
    <string name="results_object_convenience_distance_bank">最近的銀行</string>
    <string name="results_object_convenience_distance_school">最近的學校</string>
    <string name="results_object_convenience_distance_hospital">最近的醫院</string>
    <string name="results_object_convenience_statistics_traffic">附近的大眾運輸站</string>
    <string name="results_object_convenience_statistics_food">附近的餐飲店家</string>
    <string name="results_object_convenience_statistics_supermarket">附近的超市</string>
    <string name="results_object_convenience_statistics_store">附近的便利商店</string>
    <string name="results_object_convenience_statistics_bank">附近的銀行</string>
    <string name="results_object_convenience_statistics_school">附近的學校</string>
    <string name="results_object_convenience_statistics_hospital">附近的醫院</string>
    <string name="results_object_convenience_range_not_found">附近方圓500公尺未搜尋到相關店家唷～</string>
    <string name="results_object_comment_area">評論區</string>
    <string name="results_object_comment_add">給這個房源來點評論吧！</string>
    <string name="results_object_comment_add_name">請輸入您的暱稱</string>
    <string name="results_object_comment_add_content">請在此寫下評論</string>
    <string name="results_object_back">＜返回列表</string>
    <string name="results_object_internet">前往來源網站</string>
    <string name="results_object_error_info">房子已經找到主人嚕～ \n下回請盡快下決定 \n好房是不等人滴～ \n返回找其他喜愛的房子吧~</string>
    <string name="results_object_add_comment_no_enter">新增失敗! 請確認暱稱、內容皆有輸入，並且無超過字數上限！</string>
    <string name="condition_main_button_confirm">＜完成</string>
    <string name="condition_main_title">篩選條件</string>
    <string name="condition_button_reset">重設所有篩選條件</string>
    <string name="condition_main_small_title_house">房屋條件</string>
    <string name="condition_main_small_title_tenant">承租條件</string>
    <string name="condition_main_small_title_equipment">附屬設備</string>
    <string name="condition_main_small_title_environmental">環境交通</string>
    <string name="condition_main_build_type">建築物型態</string>
    <string name="condition_main_configuration">房屋格局</string>
    <string name="condition_main_seller">不要房仲</string>
    <string name="condition_main_floor">樓層</string>
    <string name="condition_main_car">附車位</string>
    <string name="condition_main_nobasement">不要地下室</string>
    <string name="condition_main_notopfloor">不要頂樓加蓋</string>
    <string name="condition_main_identity">房客身分</string>
    <string name="condition_main_gender">房客性別</string>
    <string name="condition_main_rent_time">可短租</string>
    <string name="condition_main_pet">可養寵物</string>
    <string name="condition_main_cook">可開伙</string>
    <string name="condition_main_furniture">附傢俱</string>
    <string name="condition_main_equipment">附設備</string>
    <string name="condition_main_convenience">周邊機能</string>
    <string name="condition_main_traffic">交通站點</string>
    <string name="title_activity_result_object_map">Map</string>
    <string name="compare_main_title">物件比較</string>
    <string name="compare_main_house">收藏物件</string>
    <string name="compare_main_resource">資料來源</string>
    <string name="compare_main_address">地址</string>
    <string name="compare_main_roomtype">房屋類型</string>
    <string name="compare_main_price">租金</string>
    <string name="compare_main_ping">坪數</string>
    <string name="compare_main_agent">是房仲</string>
    <string name="compare_main_rooftop">是頂樓加蓋</string>
    <string name="compare_main_update_date">系統更新日期</string>
    <string name="compare_have">✔</string>
    <string name="compare_no_have">✖</string>
    <string name="compare_error_info">尚未擁有收藏的物件唷～ \n請至搜尋結果將喜愛的房屋加進收藏，以使用比較功能唷～</string>
    <string name="compare_from_error">取得房屋資訊錯誤，請重新點擊！</string>
    <string name="title_activity_resukts_maps">Map</string>
    <string name="error_network">請確認網路連線是否正常!</string>
    <string name="push_channel_id">rent_radar_id</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radar_price_unlimited">租金不限</string>
    <string name="radar_newcount_limit">999+</string>
    <string name="radar_price_range">$%1$s - $%2$s</string>
    <string name="radar_checkuser_200">成功取得使用者資料</string>
    <string name="radar_checkuser_201">成功建立使用者資料</string>
    <string name="radar_checkuser_400">取得使用者資料失敗，錯誤代碼:400</string>
    <string name="radar_checkuser_404">取得使用者資料失敗，錯誤代碼:404</string>
    <string name="radar_rename_200">重新命名成功</string>
    <string name="radar_rename_400">重新命名失敗，錯誤代碼:400</string>
    <string name="radar_rename_404">重新命名失敗，錯誤代碼:404</string>
    <string name="radar_delete_200">刪除雷達成功</string>
    <string name="radar_delete_400">刪除雷達失敗，錯誤代碼:400</string>
    <string name="radar_delete_404">刪除雷達失敗，錯誤代碼:404</string>
    <string name="radar_push_200">設定推播成功</string>
    <string name="radar_push_400">設定推播失敗，錯誤代碼:400</string>
    <string name="radar_push_404">設定推播失敗，錯誤代碼:404</string>
</resources>