<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".FilterActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/top_app_bar_filter"
                app:navigationIcon="@drawable/ic_back_white_24dp"
                app:title="雷達設定"
                app:titleTextAppearance="@style/MyTopBarTitleStyle"/>

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorGravity="bottom"
        app:tabSelectedTextColor="@color/orange_500"
        app:tabMode="scrollable"
        app:tabTextAppearance="@style/TabTextSize24">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_top_area" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabLandmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_top_landmark" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabMRT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_top_mrt" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

    </androidx.viewpager2.widget.ViewPager2>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivRent"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/ic_money_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_rent_range"
                android:textColor="@color/blue_700"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStartRent"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:gravity="center"
                android:hint="@string/filter_rent_startrent"
                android:textColor="@color/black"
                android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/common_tilde"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEndRent"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:gravity="center"
                android:hint="@string/filter_rent_endrent"
                android:textColor="@color/black"
                android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/tvMoney"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/filter_money"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/ivType"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_room_type_24dp" />

                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:gravity="center"
                    android:text="@string/filter_type"
                    android:textColor="@color/blue_700"
                    android:textSize="20sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="10"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/mbtnGroup1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:singleSelection="false">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAll"
                        style="@style/MyOutlineButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:text="@string/fliter_type_all"
                        android:textStyle="bold"
                        app:strokeWidth="2dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnShareSuite"
                        style="@style/MyOutlineButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:text="@string/filter_type_share_suite"
                        android:textStyle="bold"
                        app:strokeWidth="2dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSingleSuite"
                        style="@style/MyOutlineButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:text="@string/filter_type_single_suite"
                        android:textStyle="bold"
                        app:strokeWidth="2dp" />

                </com.google.android.material.button.MaterialButtonToggleGroup>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/mbtnGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnWholeFloorHouse"
                        style="@style/MyOutlineButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:text="@string/filter_type_whole_floor_home"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:strokeWidth="2dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnBedsit"
                        style="@style/MyOutlineButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:text="@string/filter_type_bedsit"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:strokeWidth="2dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnHouseAndOffice"
                        style="@style/MyOutlineButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:text="@string/filter_type_house_and_office"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:strokeWidth="2dp" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/conditionCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivCondition"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_filter_24dp" />

            <TextView
                android:id="@+id/tvFilterCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/filter_filter_condition"
                android:textColor="@color/blue_700"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/common_arrow_right"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/filter_button_confirm"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/blue_800" />

</LinearLayout>