<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="7dp"
    android:layout_marginStart="7dp"
    android:layout_marginEnd="7dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_800"
                android:text="@string/results_object_comment_add"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/ibtnAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitEnd"
                app:srcCompat="@drawable/ic_send_18dp" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            android:hint="@string/results_object_comment_add_name">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etIDName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="120"
            android:hint="@string/results_object_comment_add_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etComment"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                android:ems="20"
                android:inputType="textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>